Fix map height and add form H1 alignment

--- a/components/home/home.module.scss
+++ b/components/home/home.module.scss
@@ -17,4 +17,12 @@
 
 .formColumn {
     height: 80px;
+
+    .formWrapper {
+        margin: 15px;
+
+        h1 {
+            text-align:center;
+        }
+    }
 }
